fix: retry with cleaned secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,50 +1,38 @@
-name: CI/CD with Minikube (Self-hosted)
+name: build-deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build-deploy:
+  build:
     runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Show tool versions
+      - name: Debug secrets
         run: |
-          docker --version
-          kubectl version --client --output=yaml || true
-          minikube version
+          echo "DOCKER_USERNAME is ->'${{ secrets.DOCKER_USERNAME }}'<-"
+          echo "Password length: $(echo "${{ secrets.DOCKER_PASSWORD }}" | wc -c)"
 
-      - name: Ensure Minikube is running (with Calico)
-        run: |
-          if ! minikube status >/dev/null 2>&1; then
-            minikube start --driver=docker --cni=calico
-          fi
-          kubectl config use-context minikube
-          kubectl cluster-info
-
-      - name: Docker Hub login (no prompts)
+      - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build & push image
+      - name: Build Docker image
         run: |
           IMAGE="${{ secrets.DOCKER_USERNAME }}/my-nginx:latest"
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
+          echo "Building image: $IMAGE"
+          docker build -t $IMAGE .
 
-      - name: Prepare manifests with your Docker Hub username (no repo changes)
+      - name: Push Docker image
         run: |
-          rm -rf k8s_rendered && mkdir k8s_rendered
-          cp -r k8s/* k8s_rendered/
-          sed -i "s|REPLACE_WITH_DOCKER_USERNAME|${{ secrets.DOCKER_USERNAME }}|g" k8s_rendered/deployment.yaml
+          IMAGE="${{ secrets.DOCKER_USERNAME }}/my-nginx:latest"
+          echo "Pushing image: $IMAGE"
+          docker push $IMAGE
 
-      - name: Apply Kubernetes manifests
+      - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k8s_rendered/
-          kubectl rollout status deployment/demo-app --timeout=180s
-
-      - name: Show service URL
-        run: |
-          minikube service demo-service --url
+          kubectl apply -f k8s/
