--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,49 +7,45 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: self-hosted   # use your self-hosted runner
+    runs-on: self-hosted
 
     steps:
-      # Step 1: Checkout repository
+      # Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Docker login (with GitHub Secrets)
+      # Docker login
       - name: Docker Login
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           echo "✅ Docker login successful"
 
-      # Step 3: Build Docker image
+      # Build Docker image
       - name: Build Docker image
         run: |
           IMAGE="${{ secrets.DOCKER_USERNAME }}/my-nginx:latest"
           echo "Building image: $IMAGE"
           docker build -t $IMAGE .
 
-      # Step 4: Push Docker image
+      # Push Docker image
       - name: Push Docker image
         run: |
           IMAGE="${{ secrets.DOCKER_USERNAME }}/my-nginx:latest"
           echo "Pushing image: $IMAGE"
           docker push $IMAGE
 
-      # Step 5: Update Kubernetes deployment to use latest image
+      # Deploy to Kubernetes
       - name: Deploy to Kubernetes
         run: |
           IMAGE="${{ secrets.DOCKER_USERNAME }}/my-nginx:latest"
-          echo "Deploying with image: $IMAGE"
-
-          # replace image in deployment.yaml automatically
           sed -i "s|image: .*|image: $IMAGE|" k8s/deployment.yaml
-
-          # apply configs
           kubectl apply -f k8s/
 
-      # Step 6: Verify rollout
+      # Verify rollout
       - name: Verify Deployment
         run: |
           kubectl rollout status deployment/my-nginx
           kubectl get pods -o wide
           echo "🚀 Deployment finished successfully!"
+
 
