--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo-service
+  name: my-nginx-service
 spec:
   type: NodePort
   selector:
-    app: demo
+    app: my-nginx   # MUST match deployment labels
   ports:
-    - name: http
-      port: 80
+    - port: 80
       targetPort: 80
-    
+      # nodePort removed → auto-assigned
