--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,33 +7,39 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: self-hosted
+    runs-on: self-hosted   # your self-hosted runner
 
     steps:
+      # 1️⃣ Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ Docker login
       - name: Docker Login
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           echo "✅ Docker login successful"
 
+      # 3️⃣ Build Docker image
       - name: Build Docker image
         run: |
           IMAGE="${{ secrets.DOCKER_USERNAME }}/my-nginx:latest"
           docker build -t $IMAGE .
 
+      # 4️⃣ Push Docker image
       - name: Push Docker image
         run: |
           IMAGE="${{ secrets.DOCKER_USERNAME }}/my-nginx:latest"
           docker push $IMAGE
 
+      # 5️⃣ Deploy to Kubernetes
       - name: Deploy to Kubernetes
         run: |
           IMAGE="${{ secrets.DOCKER_USERNAME }}/my-nginx:latest"
           sed -i "s|image: .*|image: $IMAGE|" k8s/deployment.yaml
           kubectl apply -f k8s/
 
+      # 6️⃣ Verify Deployment
       - name: Verify Deployment
         run: |
           kubectl rollout status deployment/my-nginx
